--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ button {
     font-size: 16px;
     background: #FFB100;
     /* Better contrast on light background */
-    color: #fff;
+    color: #FFEFD4;
     border: none;
     border-radius: 5px;
     cursor: pointer;
